--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link rel='stylesheet' href='index.css'>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src='index.js' defer></script>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -16,19 +19,26 @@
 </head>
 <body>
 
-  IP Address Tracker
+  <h1>
+    IP Address Tracker
+  </h1>
 
-  Search for any IP address or domain
+      <input type='text' name='searchip' id='ipsearch' placeholder='Search for any IP address or domain'>
+      <button type='button' onclick="getData()">Submit</button>
 
-  IP Address
-  Location
-  Timezone
-    UTC <!-- add offset value dynamically using the API -->
-  ISP
+  <div class='report'>
+    <h3>IP ADDRESS</h3>
+    <h3>LOCATION</h3>
+      <div id='location'></div>
+    <h3>TIMEZONE</h3>
+      <h3>UTC</h3> <!-- add offset value dynamically using the API -->
+    <h3>ISP</h3>
+  </div>
   
   <div class="attribution">
     Challenge by FEM. 
     Coded by BC.
   </div>
+
 </body>
 </html>
