add data request & display

--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
 
   <div class='report'>
     <h3>IP ADDRESS</h3>
+      <div class='data' id='ip'></div>
     <h3>LOCATION</h3>
-      <div id='location'></div>
+      <div class='data' id='location'></div>
     <h3>TIMEZONE</h3>
-      <h3>UTC</h3> <!-- add offset value dynamically using the API -->
+      <div class='data' id='timezone'></div> <!-- add offset value dynamically using the API -->
     <h3>ISP</h3>
+      <div class='data' id='isp'></div>
   </div>
   
-  <div class="attribution">
+  <div class="attribution footer">
     Challenge by FEM. 
     Coded by BC.
   </div>
