styled & positioned input button

--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
     IP Address Tracker
   </h1>
 
-      <input type='text' name='searchip' id='ipsearch' placeholder='Search for any IP address or domain'>
-      <button type='button' onclick="getData()">Submit</button>
+      <div class='input-ip'>
+        <input type='text' name='searchip' id='ipsearch' placeholder='Search for any IP address or domain'>
+        <button type='submit' onclick="getData()">
+          <img src='images/icon-arrow.svg'>
+        </button>
+      </div>
 
   <div class='report'>
     <div class='subreport'>
