--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+  integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+  crossorigin=""/>
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+   integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+   crossorigin=""></script>
   <link rel='stylesheet' href='index.css'>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src='index.js' defer></script>
@@ -48,7 +54,9 @@
         <div class='data' id='isp'></div>
     </div>
   </div>
-  
+
+  <div id="map"></div>
+
   <div class="attribution footer">
     Challenge by FEM. 
     Coded by BC.
