--- a/index.html
+++ b/index.html
@@ -24,38 +24,40 @@
   </style>
 </head>
 <body>
+  <div class='content'>
+    <h1>
+      IP Address Tracker
+    </h1>
 
-  <h1>
-    IP Address Tracker
-  </h1>
-
-      <div class='input-ip'>
-        <input type='text' name='searchip' id='ipsearch' placeholder='Search for any IP address or domain'>
-        <button type='submit' onclick="getData()">
-          <img src='images/icon-arrow.svg'>
-        </button>
+        <div class='input-ip'>
+          <input type='text' name='searchip' id='ipsearch' placeholder='Search for any IP address or domain'>
+          <button type='submit' onclick="getData()">
+            <img src='images/icon-arrow.svg'>
+          </button>
+        </div>
+    <div class='display'>
+      <div id="map"></div>
+      <div class='report'>
+        <div class='subreport'>
+          <h3>IP ADDRESS</h3>
+            <div class='data' id='ip'></div>
+        </div>
+        <div class='subreport'>
+          <h3>LOCATION</h3>
+            <div class='data' id='location'></div>
+        </div>
+        <div class='subreport'>
+          <h3>TIMEZONE</h3>
+            <div class='data' id='timezone'></div> <!-- add offset value dynamically using the API -->
+        </div>
+        <div class='subreport'>
+          <h3>ISP</h3>
+            <div class='data' id='isp'></div>
+        </div>
       </div>
-
-  <div class='report'>
-    <div class='subreport'>
-      <h3>IP ADDRESS</h3>
-        <div class='data' id='ip'></div>
-    </div>
-    <div class='subreport'>
-      <h3>LOCATION</h3>
-        <div class='data' id='location'></div>
-    </div>
-    <div class='subreport'>
-      <h3>TIMEZONE</h3>
-        <div class='data' id='timezone'></div> <!-- add offset value dynamically using the API -->
-    </div> 
-    <div class='subreport'>
-      <h3>ISP</h3>
-        <div class='data' id='isp'></div>
     </div>
   </div>
-
-  <div id="map"></div>
+ 
 
   <div class="attribution footer">
     Challenge by FEM. 
